--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Here is a list of all the Users</h1>
+<ul class='user-list'>
+  <% @users.each do |user|%>
+    <li><%= render 'shared/user', user: user%> </li>
+  <%end%>
+</ul>
