ADD styles for project

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,129 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  width: 80%;
+}
+
+.user-list{
+  list-style-type: none;
+}
+
+.user-list > li {
+  margin-bottom: 20px;
+}
+
+.users-card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.users-card-body {
+  display: flex;
+  text-decoration: none;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+  border: 2px solid black;
+  border-radius: 10%;
+  width: 60%;
+  justify-content: space-between;
+}
+
+.user-post-count {
+  align-self: flex-end;
+}
+
+.users-bio {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 2px solid black;
+}
+
+.users-post-cards-ul {
+  margin-bottom: 20px;
+}
+
+.show-all-post-btn {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.users-bio ~ li {
+  list-style: none;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.posts-card {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  justify-content: center;
+
+}
+
+.post-cards-count {
+  align-self: flex-end;
+}
+
+.back-btn {
+  margin-bottom: 30px;
+}
+
+.users-post-cards-ul {
+  width: 100%;
+}
+
+.users-post-cards-ul > li {
+  list-style: none;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.post-card-on-click {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+}
+
+.post-card-title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.comment-card {
+  list-style: none;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.comment-card > li {
+  margin-bottom: 10px;
+}
+
+.comment-author {
+  font-weight: bold;
+}
