ADD 5 most recent comments to the posts page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,20 @@
 <%= render 'shared/user', user: @user%>
-<ul>
+<ul class='all-posts'>
   <% if @posts.empty?%>
     <p class='post-card-no-click'>No posts</p>
   <% else%>
-  <div class='users-bio'><%=@user.bio%></div>
   <% @posts.each do |post|%>
     <li>
-      <%= render 'shared/post', post: post%>
+      <div class='posts-card-div'><%= render 'shared/post', post: post%></div>
+      <div class='posts-comments'>
+        <h3>Comments:</h3>
+        <% post.recent_5_comments.each do |comment,index| %>
+        <div>
+          <span class='comment-author'><%= comment.author.name %>:</span>
+          <span><%= comment.text %></span>
+        </div>
+        <% end %>
+      </div>
     </li>
   <%end%>
 <%end%>
