--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,11 +66,25 @@ main {
   border: 1px solid black;
 }
 
-.users-bio ~ li {
+.all-posts {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.all-posts > li {
   list-style: none;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.posts-card-div {
   border: 1px solid black;
-  padding: 5px;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.posts-comments {
+  border: 1px solid black;
+  padding: 10px;
 }
 
 .posts-card {
