--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/user', user: @user%>
 <ul class='all-posts'>
-  <% if @posts.empty?%>
+  <% if @user.post.empty?%>
     <p class='post-card-no-click'>No posts</p>
   <% else%>
-  <% @posts.each do |post|%>
+  <% @user.post.each do |post|%>
     <li>
       <div class='posts-card-div'><%= render 'shared/post', post: post%></div>
       <div class='posts-comments'>
