FIX reviewers comment

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,4 +19,5 @@
   <%end%>
 <%end%>
 </ul>
+<div class='see-all-post-btn-container'><a class='see-all-post-btn'>Pagination</a></div>
 <%= link_to 'Back', :back, class: 'back-btn btn-secondary' %>
