--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,5 +1,5 @@
 <div class='users-card'>
-  <img src=<%=user.photo%> alt="placeholder" class="profile"/>
+  <img src="<%=user.photo%>" alt="placeholder" class="profile"/>
   <%= link_to user, class: 'users-card-body' do %>
   <h2><%= user.name %></h2>
   <div class='user-post-count'> Number of posts: <%=user.post_counter%> </div>
