--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <%= form_with model:@user, html: { class: 'registration-form' } do |form| %>
-    <h1>Update User Profile</h1>
-    <%= form.label :photo %>
-    <%= form.text_field :photo %>
-    <%= form.label :bio %>
-    <%= form.text_area :bio %>
-    <%= form.submit 'Update', class: 'update-btn' %>
-  <% end %
+  <h1>Update User Profile</h1>
+  <%= form.label :photo %>
+  <%= form.text_field :photo %>
+  <%= form.label :bio %>
+  <%= form.text_area :bio %>
+  <%= form.submit 'Update', class: 'update-btn' %>
+<% end %>
